--- a/employees/webapp/i18n/i18n.properties
+++ b/employees/webapp/i18n/i18n.properties
@@ -3,9 +3,18 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Employees List
+appTitle=Employees 
 
 #YDES: Application description
-appDescription=List
+appDescription=LiEmployees
 #XTIT: Main view title
 title=Employees List
+
+#Labels
+labelEmployee=Employee
+labelCountry=Country
+
+# Country Keys
+countryUS=United States
+countryUK=United Kindom
+countryES=Spain
